--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -452,6 +452,13 @@ ul.list-blog{
                 border: none;
                 width: 100%;
             }
+            input[type=tel]{
+                height: 40px;
+                background-color: transparent;
+                border-bottom: 1px solid #686868 !important;
+                border: none;
+                width: 100%;
+            }
             textarea {
                 background-color: transparent;
                 border: none;
