--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -607,6 +607,10 @@ ul.list-blog{
             padding: 15px;
             width: 100%;
         }
+        input[type=tel]{
+            padding: 15px;
+            width: 100%;
+        }
         .form-label {
             margin-bottom: 0rem;
             padding-left: 1rem;
